[package]
name = "firebase_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Beaxhem/firebase_rs"
description = "Simple package for handling Firebase authorization with AWC client"
license-file = "LICENSE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.0", features = ["rustls"] }
serde = { version ="1.0.106", features = ["derive"]}
serde_json = "1.0.51"